fix: gap between elements on index, change blob colors and button colors

--- a/src/index/index.module.css
+++ b/src/index/index.module.css
@@ -352,3 +352,9 @@
     margin-left: 6rem;
   }
 }
+
+.tjenesteomrader {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
